@@ -24,6 +24,9 @@
    prefetch tasks. Supports automatic maintenance with ``--auto`` flag and task-specific
    configuration. (Jelmer Vernooĳ)
 
+ * Add support for ``dulwich replace`` command to create refs that replace objects.
+   (Jelmer Vernooĳ, #1834)
+
 0.24.7	2025-10-23
 
  * Add sparse index support for improved performance with large repositories.
